--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,33 @@
-# Build Stage
+# ---------- Build Stage ----------
 FROM node:18-alpine as build
 
+# Set working directory
 WORKDIR /app
+
+# Copy package files and install dependencies
 COPY package.json package-lock.json ./
 RUN npm install
+
+# Copy the rest of the application code
 COPY . .
+
+# Build the React app
 RUN npm run build
 
-# Serve Stage
+# ---------- Serve Stage ----------
 FROM nginx:alpine
 
+# Remove default nginx website
+RUN rm -rf /usr/share/nginx/html/*
+
+# Copy built React files from build stage
 COPY --from=build /app/build /usr/share/nginx/html
 
+# Copy custom nginx config (see below)
+COPY default.conf /etc/nginx/conf.d/default.conf
+
+# Expose port 80
 EXPOSE 80
+
+# Start nginx in foreground
 CMD ["nginx", "-g", "daemon off;"]
