--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,22 @@
-name: Deploy to EC2
+name: Deploy to EC2 with Docker
 
 on:
   push:
-    branches: [main]  # or dev if that's your main branch
+    branches:
+      - main   # or use 'dev' if you deploy from dev branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Connect to EC2 and deploy
+    - name: Deploy via SSH to EC2
       uses: appleboy/ssh-action@v0.1.6
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-          cd myproject
-          ./deploy.sh
+          cd /home/ubuntu/myproject  # path to your project
+          git pull origin main       # pull latest code
+          ./deploy.sh                # run deployment script
