--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,25 @@
-name: Deploy to EC2 with Docker
-
+name: Deploy to EC2
 on:
   push:
     branches:
       - main
-
 jobs:
   deploy:
-    name: Build and Deploy to EC2
     runs-on: ubuntu-latest
-
     steps:
-    - name: Deploy via SSH to EC2
-      uses: appleboy/ssh-action@v0.1.6
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.SSH_KEY}}
-        script: |
-          cd /home/ubuntu/myproject
-          git pull origin main
-          ./deploy.sh
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd /home/***/myproject
+            git fetch origin main
+            git reset --hard origin/main
+            # Check which docker-compose command works
+            if command -v docker-compose &> /dev/null; then
+              docker-compose up -d --build
+            else
+              docker compose up -d --build
+            fi
