--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,22 @@
-name: Deploy to EC2
+name: Deploy to EC2 with Docker
+
 on:
   push:
     branches:
       - main
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@v0.1.6
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            
-
-            cd /home/***/myproject
-            git fetch origin main
-            git reset --hard origin/main
-
-            # Check which docker-compose command works
-            if command -v docker-compose &> /dev/null; then
-              docker-compose up -d --build
-            else
-              docker compose up -d --build
-            fi
+    - name: Deploy via SSH to EC2
+      uses: appleboy/ssh-action@v0.1.6
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_KEY }}
+        script: |
+          cd /home/ubuntu/myproject
+          git pull origin main
+          ./deploy.sh
